<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        >
        <TextView android:id="@+id/title_left_text"
            android:layout_alignParentLeft="true"
            android:ellipsize="end"
            android:singleLine="true"
            style="?android:attr/windowTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            />
        <TextView android:id="@+id/title_right_text"
            android:layout_alignParentRight="true"
            android:ellipsize="end"
            android:singleLine="true"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:textColor="#fff"
            android:layout_weight="1"
            />
    </RelativeLayout>
    <Button 
        android:id="@+id/button_scan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connect"
        />
    
    <EditText
        android:id="@+id/edit_text_out"
        android:layout_width="match_parent"
        android:layout_height="135dp"
        android:gravity="center_vertical|top"
        android:text="@string/txt_content"
        android:textSize="18sp" 
        android:hint="@string/input"
        android:background="@drawable/bt_et"

        >
    </EditText>
   
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_paper_width">
        </TextView>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <RadioButton
                android:id="@+id/width_58mm"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/width1"
                />

            <RadioButton
                android:id="@+id/width_80mm"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/width2" />


        </LinearLayout>


        <CheckBox
            android:id="@+id/checkBoxHEX"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/printhex" />
    </LinearLayout>
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:text="@string/choose_printcoding"
            android:visibility="gone"
            >
        </TextView>
        
        <RadioGroup
        android:id="@+id/radioGroupPaperSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
            android:visibility="gone"
            >

        <RadioButton
            android:id="@+id/gbk12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/gbk12"
            android:layout_marginTop="-8dip"/>

        <RadioButton
            android:id="@+id/big5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/big5" 
            android:layout_marginTop="-8dip"/>

         <RadioButton
            android:id="@+id/thai"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thai" 
            android:layout_marginTop="-8dip"/>
         
         <RadioButton
            android:id="@+id/kor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kor" 
            android:layout_marginTop="-8dip"/>

            <RadioButton
                android:id="@+id/eyu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eyu"
                android:layout_marginTop="-8dip"/>

         </RadioGroup>
    </LinearLayout>

    </HorizontalScrollView>

    
    <ScrollView        
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
        <LinearLayout 
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
         
            <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

                <Button
                    android:id="@+id/Send_Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1.0"
                    android:text="@string/btnSend"></Button>
        <Button
            android:id="@+id/btn_test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_test"
            android:layout_weight="1.0"
            android:gravity="center">
        </Button>
    </LinearLayout>
    
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/btn_printpicture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/printpicture"
            android:layout_weight="1.0">
        </Button>
        
        <Button
            android:id="@+id/btn_prtbmp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_prtbmp"
            android:layout_weight="1"

            >
        </Button>

         <Button
             android:id="@+id/btn_test1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="print_test"
             android:layout_weight="1"
             android:visibility="gone"
             >
         </Button>
        
    </LinearLayout>
    
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        
        <Button
            android:id="@+id/btn_prtcommand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chosecommand"
            android:layout_weight="1.0"
            android:gravity="center">
        </Button>
        
        <Button
            android:id="@+id/btn_prttable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_prttable"
            android:layout_weight="1.0"
            android:gravity="center">
        </Button>
       
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        
        <Button
            android:id="@+id/btn_prtsma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Smallticketprinting"
            android:layout_weight="1.0"
            android:gravity="center">
        </Button>
        
        <Button
            android:id="@+id/btn_prtbarcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_prtcode"
            android:layout_weight="1.0"
            android:gravity="center">
        </Button>
       
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        
        <Button
            android:id="@+id/btn_scqr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_scqr"
            android:layout_weight="1.0"
            android:gravity="center">
        </Button>
        
        <Button
            android:id="@+id/btn_dyca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_dyca"
            android:layout_weight="1.0"
            android:gravity="center">
        </Button>
       
    </LinearLayout>
    
    <Button 
        android:id="@+id/btn_close"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnClose"/>

    <ImageView
        android:id="@+id/imageViewPictureUSB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxHeight="1920dp"
        android:maxWidth="1080dp"
        android:contentDescription="@string/contentdescription" />
            
             </LinearLayout>                      
    </ScrollView>

</LinearLayout>
